# luajit-max

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  pyproject.toml
examples/: advanced_luajit.lua  api_demo.lua  counter.lua  dsp.lua  dsp_ffi.lua  dsp_stk.lua  inlet_aware.lua  math_ops.lua  simple_luajit.lua  test_api.lua  time_helpers.lua
help/: luajit.maxhelp  luajit~.maxhelp
source/notes/: api_module.md  code_review.md  critical_fixes_summary.md  delay_function_fix.md  dynamic_parameters.md  ffi_dsp_functions.md  lua_examples_review.md  lua_fixes_summary.md  new_ext.md  refactoring_summary.md  sample_rate_usage.md  stk_integer_parameter_fix.md
source/projects/common/: CMakeLists.txt  USAGE.md  lua_engine.c  lua_engine.h  luajit_external.h  max_helpers.c  max_helpers.h
source/projects/libapi/: API_TODO.md  README.md  api_atom.h  api_atomarray.h  api_box.h  api_buffer.h  api_clock.h  api_common.h  api_database.h  api_dictionary.h  api_hashtab.h  api_inlet.h  api_linklist.h  api_object.h  api_outlet.h  api_patcher.h  api_patchline.h  api_path.h  api_preset.h  api_qelem.h  api_symbol.h  api_table.h  api_time.h  luajit_api.h
source/projects/libdsp/: CMakeLists.txt  libdsp.c
source/projects/luajit/: CMakeLists.txt  luajit.c
source/projects/luajit.stk~/: CMakeLists.txt  luajit.stk~.cpp  stk_bindings.h
source/projects/luajit~/: CMakeLists.txt  luajit~.c
source/scripts/: build_dependencies.sh  build_stk.sh  parse_headers.py
